cmake_minimum_required(VERSION 3.22)

project (Cpp-notes)

set(CMAKE_CXX_STANDARD 20)

add_executable(1.define-class 1.define-class.cpp)

add_executable(2.define-members 2.define-members.cpp)

add_executable(3.member-functions 3.member-functions.cpp)

add_executable(4.constructors-destructors 4.constructors-destructors.cpp) 

# add_executable(4.constructors-destructors 5.constructors-destructors.cpp) 

# add_executable(4.constructors-destructors 6.constructors-destructors.cpp) 

add_executable(4.constructors-destructors 7.conversion-operators.cpp) 